Fix contrast issues on sourced from links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -339,8 +339,6 @@ footer p {
     height: 5rem;
 }
 
-/* empty posts and gpus */
-
 .empty-gpu,
 .empty-post,
 .add-gpu,
@@ -361,13 +359,17 @@ footer p {
     color: #000;
 }
 
-/* .masthead-image {
-    width: 100%;
-    height: 60vh;
-    object-fit: cover;
-    overflow: hidden;
+.gpu-link a,
+.post-link a {
+    text-decoration: none;
+    color: #000;
+}
 
-} */
+.gpu-link a:hover,
+.post-link a:hover {
+    text-decoration: underline;
+    color: #bd0000;
+}
 
 .btn-like {
     border: 1px solid transparent;
